--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,5 @@
 platform = espressif32
 board = esp32s3box
 framework = espidf
-build_type = release
+lib_extra_dirs = .
 monitor_speed = 115200
-lib_deps =
-
