Update metadata for Joulepoint fork

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,10 @@
+[platformio]
+default_envs = esp32s3
+
 [env:esp32s3]
 platform = espressif32
 board = esp32s3box
 framework = espidf
 lib_extra_dirs = .
 monitor_speed = 115200
+lib_ldf_mode = deep
