Fix PlatformIO build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,14 @@ if(PLATFORMIO OR PioPlatform)
 endif()
 
 if (NOT DISABLE_EDM)
+    find_program(EVEREST_DEPENDENCY_MANAGER "edm")
+    if(NOT EVEREST_DEPENDENCY_MANAGER)
+        message(STATUS "edm not found - disabling EDM")
+        set(DISABLE_EDM ON)
+    endif()
+endif()
+
+if (NOT DISABLE_EDM)
     evc_setup_edm()
     # In EDM mode, we can't install exports (because the dependencies usually do not install their exports)
     set(ISO15118_INSTALL OFF)
