--- a/platformio.ini
+++ b/platformio.ini
@@ -1,10 +1,7 @@
 [platformio]
-default_envs = esp32s3
+default_envs = native
+src_dir = examples/esp32_demo
 
-[env:esp32s3]
-platform = espressif32
-board = esp32s3box
-framework = espidf
-lib_extra_dirs = .
-monitor_speed = 115200
-lib_ldf_mode = deep
+[env:native]
+platform = native
+build_flags = -DPLATFORMIO=ON
