Add esp32s3 environment

--- a/platformio.ini
+++ b/platformio.ini
@@ -5,3 +5,11 @@ src_dir = examples/esp32_demo
 [env:native]
 platform = native
 build_flags = -DPLATFORMIO=ON
+
+[env:esp32s3]
+platform = espressif32
+board = esp32s3box
+framework = espidf
+lib_extra_dirs = .
+monitor_speed = 115200
+lib_ldf_mode = deep
